<resources>
    <string name="app_name">AlcoTools</string>
    <string name="title_home">Пить</string>
    <string name="title_dashboard">История</string>
    <string name="title_drinks_list">Каталог</string>
    <string name="test_string_image_of_a_drink">image of a drink</string>
    <string name="test_string_element_drink_preview_name">drink preview name</string>
    <string name="test_string_element_drink_preview_description">drink preview description</string>
    <string name="test_string_element_drink_alcohol_rate">alcohol rate</string>
    <string name="test_string_element_drink_portion_ml">Portion ml</string>
    <string name="test_string_element_drink_ingredients_list">Ingredients list</string>
    <string name="poster">poster</string>
    <string name="services">Сервисы</string>
    <string name="settings_name">Настройки</string>
    <string name="image_of_settings">Image of settings</string>
    <string name="name_of_dash_element">Name</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="title_test">Тест</string>
    <string name="edit">Edit</string>
    <string name="drink_recipe_description">Drink recipe description</string>
</resources>