<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/elementDrinkPreviewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/test_string_element_drink_preview_name"
            android:ems="10" />

        <TextView
            android:id="@+id/elementDrinkPreviewAlcohol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/test_string_element_drink_alcohol_rate"
            android:ems="10" />

        <TextView
            android:id="@+id/elementDrinkPreviewPortionMl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:text="@string/test_string_element_drink_portion_ml" />

        <TextView
            android:id="@+id/elementDrinkPreviewIngredientsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:text="@string/test_string_element_drink_ingredients_list" />

        <TextView
            android:id="@+id/elementDrinkPreviewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:text="@string/test_string_element_drink_preview_description" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10">

        <ImageView
            android:id="@+id/elementDrinkPreviewImageView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:contentDescription="@string/test_string_image_of_a_drink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

<!--        <com.like.LikeButton-->
<!--            android:id="@+id/elementDrinkPreviewHeartButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            app:icon_size="25dp"-->
<!--            app:icon_type="heart"-->
<!--            app:layout_constraintBottom_toBottomOf="@id/elementDrinkPreviewImageView"-->
<!--            app:layout_constraintEnd_toEndOf="@id/elementDrinkPreviewImageView"-->
<!--            app:layout_constraintStart_toStartOf="@id/elementDrinkPreviewImageView"-->
<!--            app:layout_constraintTop_toTopOf="@id/elementDrinkPreviewImageView"-->
<!--            app:layout_constraintVertical_bias="0.75"-->
<!--            app:layout_constraintHorizontal_bias="0.75" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
