<?xml version="1.0" encoding="UTF-8"?>
<ScrollView tools:text="@tools:sample/lorem"
    tools:context=".ui.drinksList.DrinkRecipeActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/fragmentDrinksListScrollView"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:src="@drawable/cocktail_bar_liqueurs" />

        <ImageView
            android:id="@+id/elementDrinkRecipeImageView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="@string/test_string_image_of_a_drink"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/poster"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            tools:srcCompat="@tools:sample/avatars" />

<!--        <com.like.LikeButton-->
<!--            android:id="@+id/elementDrinkPreviewHeartButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            app:layout_constraintBottom_toBottomOf="@id/elementDrinkPreviewImageView"-->
<!--            app:layout_constraintEnd_toEndOf="@id/elementDrinkPreviewImageView"-->
<!--            app:layout_constraintHorizontal_bias="0.75"-->
<!--            app:layout_constraintStart_toStartOf="@id/elementDrinkPreviewImageView"-->
<!--            app:layout_constraintTop_toTopOf="@id/elementDrinkPreviewImageView"-->
<!--            app:layout_constraintVertical_bias="0.75" />-->

        <TextView
            android:id="@+id/elementDrinkRecipeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/test_string_element_drink_preview_name"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/poster"
            app:layout_constraintStart_toEndOf="@id/elementDrinkRecipeImageView"
            app:layout_constraintTop_toBottomOf="@id/poster" />

        <TextView
            android:id="@+id/elementDrinkRecipeAlcohol"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/test_string_element_drink_alcohol_rate"
            app:layout_constraintStart_toStartOf="@id/elementDrinkRecipeTitle"
            app:layout_constraintTop_toBottomOf="@id/elementDrinkRecipeTitle" />

        <TextView
            android:id="@+id/elementDrinkRecipePortionMl"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:text="@string/test_string_element_drink_portion_ml"
            app:layout_constraintStart_toStartOf="@id/elementDrinkRecipeAlcohol"
            app:layout_constraintTop_toBottomOf="@id/elementDrinkRecipeAlcohol" />

        <TextView
            android:id="@+id/elementDrinkRecipeIngredientsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="15dp"
            android:text="@string/test_string_element_drink_ingredients_list"
            app:layout_constraintStart_toStartOf="@id/elementDrinkRecipeImageView"
            app:layout_constraintTop_toBottomOf="@id/elementDrinkRecipeImageView" />

        <TextView
            android:id="@+id/elementDrinkRecipeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintTop_toBottomOf="@id/elementDrinkRecipeIngredientsList"
            tools:text="@tools:sample/lorem/random[0]" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
